--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,5 +23,140 @@ a {
 
 body {
   margin: 0;
-  background-image: url(../assets/images/sleep-cat.jpeg);
+  background-color: #1d1f29;
+  width: 1440px;
+  height: 800px;
+  font-family: 'Inter', sans-serif;
+}
+.header {
+  position: relative;
+  background-color: #20222f;
+  height: 244px;
+}
+.title {
+  position: absolute;
+  top: 36px;
+  left: 162px;
+  font-weight: 700;
+  font-size: 28px;
+}
+.subtitle {
+  position: absolute;
+  top: 76px;
+  left: 163px;
+  font-weight: 700;
+  font-size: 14px;
+  color: #8c98c6;
+}
+.big-cards {
+  position: relative;
+  top: -90px;
+}
+.big-card {
+  position: absolute;
+  top: 0;
+  left: 165px;
+  width: 255px;
+  height: 216px;
+  background-color: #252b42;
+  border-top: 5px solid #178ff5;
+  border-radius: 5px;
+}
+.big-card--second {
+  position: absolute;
+  left: 450px;
+}
+.big-card--third {
+  position: absolute;
+  left: 735px;
+  border-top: 5px solid #df4896;
+}
+.big-card--fourth {
+  position: absolute;
+  left: 1020px;
+  border-top: 5px solid #c4032b;
+}
+.big-card__icon {
+  position: absolute;
+  top: 32px;
+  left: 85px;
+}
+.big-card__icon--third {
+  position: absolute;
+  left: 68px;
+}
+.big-card__icon--fourth {
+  position: absolute;
+  left: 86px;
+}
+
+.big-card__user {
+  position: absolute;
+  top: 35px;
+  left: 113px;
+  color: #8c98c6;
+  font-size: 12px;
+  font-weight: 700;
+}
+.big-card__user--third {
+  position: absolute;
+  left: 96px;
+}
+.big-card__user--fourth {
+  position: absolute;
+  left: 114px;
+}
+.big-card__number {
+  position: absolute;
+  top: 80px;
+  left: 64px;
+  font-size: 56px;
+  line-height: 48px;
+  letter-spacing: -2px;
+  font-weight: 700;
+}
+.big-card__number--third {
+  position: absolute;
+  left: 79px;
+}
+.big-card__text {
+  position: absolute;
+  top: 137px;
+  left: 72px;
+  letter-spacing: 5px;
+  font-size: 12px;
+  color: #8c98c6;
+}
+.big-card__arrow {
+  position: absolute;
+  top: 183px;
+  left: 94px;
+}
+.big-card__arrow--third {
+  position: absolute;
+  top: 183px;
+  left: 81px;
+}
+.big-card__arrow--fourth {
+  position: absolute;
+  top: 183px;
+  left: 91px;
+}
+
+.big-card__day {
+  position: absolute;
+  top: 177px;
+  left: 106px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #1eb589;
+}
+.big-card__day--third {
+  position: absolute;
+  left: 93px;
+}
+.big-card__day--fourth {
+  position: absolute;
+  left: 103px;
+  color: #dc414c;
 }
